--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="#section_contact">Contact</a>
               </li>
+               <li class="nav-item en" style="width:30px">
+                <a class="nav-link" href="https://sanchouskin.github.io/Sani_Portfolio_eng/">EN|</a>
+              </li>
+              <li class="nav-item ru" style="width:30px">
+                <a class="nav-link" href="https://sanchouskin.github.io/Sani_Portfolio/">RU</a>
+              </li>                                            
 
             </ul>
           </div>
