--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <span class="saniabout">About Me</span>
             <div class="about-text ">
 
-              <p class="h5">I am Askarbek Sanirabiga, but you can call me Sani.I am a second-year student and am studying a completely remote specialty from programming. </p>
+              <p class="h5">I am Askarbek Sanirabika, but you can call me Sani.I am a second-year student and am studying a completely remote specialty from programming. </p>
               <p class="h5">But I believe that it is never too late to learn the coolest skill! I currently know HTML,C++, and basic JS. I can create and decorate websites.But I won't stop there!</p>
 <span class="saniabout">-Sani</span>
             </div>
